# ITKTools

./: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  CommandLineArgumentHelper_8cxx.html  Doxyfile  ImageCompare_8cxx.html  KappaStatisticMainHelper_8cxx.html  README.md  annotated.html  averagevectormagnitude_8cxx.html  binaryimageoperator_8cxx.html  binarythinning_8cxx.html  braindistance_8cxx.html  castconvertDicomScalarA_8cxx.html  castconvertDicomScalarB_8cxx.html  castconvertMultiComponent2D2CA_8cxx.html  castconvertMultiComponent2D2CB_8cxx.html  castconvertMultiComponent2D3CA_8cxx.html  castconvertMultiComponent2D3CB_8cxx.html  castconvertMultiComponent2D4CA_8cxx.html  castconvertMultiComponent2D4CB_8cxx.html  castconvertMultiComponent3D2CA_8cxx.html  castconvertMultiComponent3D2CB_8cxx.html  castconvertMultiComponent3D3CA_8cxx.html  castconvertMultiComponent3D3CB_8cxx.html  castconvertMultiComponent3D4CA_8cxx.html  castconvertMultiComponent3D4CB_8cxx.html  castconvertMultiComponent4D2CA_8cxx.html  castconvertMultiComponent4D2CB_8cxx.html  castconvertMultiComponent4D3CA_8cxx.html  castconvertMultiComponent4D3CB_8cxx.html  castconvertMultiComponent4D4CA_8cxx.html  castconvertMultiComponent4D4CB_8cxx.html  castconvertMultiComponent_8cxx.html  castconvertScalar2DA_8cxx.html  castconvertScalar2DB_8cxx.html  castconvertScalar3DA_8cxx.html  castconvertScalar3DB_8cxx.html  castconvertScalar4DA_8cxx.html  castconvertScalar4DB_8cxx.html  (+125 more)
Testing/: CMakeLists.txt
Testing/Baselines/: CastConvert.mhd  CastConvert.raw  CastConvert_DICOM.mha  ExtractIndex0.mhd  ExtractIndex0.raw  ImagesToVectorImage.mhd  ImagesToVectorImage.raw  MeanStdImage_Mean.mhd  MeanStdImage_Mean.raw  MeanStdImage_PopulationStd.mhd  MeanStdImage_PopulationStd.raw  MeanStdImage_SampleStd.mhd  MeanStdImage_SampleStd.raw  MeanStdImage_Std.mhd  unaryimageoperator_SIN.mha
Testing/Dashboard/: pxDashboardCommon.cmake  pxDashboard_BIGR_linux64_gcc.cmake  pxDashboard_BIGR_winXP32_VS2008.cmake  pxDashboard_LKEB_linux64_gcc.cmake  pxDashboard_LKEB_win10-64_VS2015.cmake  pxDashboard_LKEB_win7-64_VS2008.cmake  pxDashboard_LKEB_win7-64_VS2010.cmake
Testing/Data/: WhiteStripe1.mhd  WhiteStripe1.raw  WhiteStripe1_3.mhd  WhiteStripe1_3.raw  WhiteStripe2.mhd  WhiteStripe2.raw  WhiteStripe2_4.mhd  WhiteStripe2_4.raw  WhiteStripe3.mhd  WhiteStripe3.raw  WhiteStripe4.mhd  WhiteStripe4.raw
src/: CMakeLists.txt  CMakeMacros.cmake  CTestConfig.cmake  CompareScript.cmake  ITKTOOLSConfig.cmake.in  UseFile.cmake
src/addtopixelimagefilter/: CMakeLists.txt  addtopixelimagefilter.cxx  itkAddToPixelImageFilter.h
src/andimagefilter/: AndImageFilter.cxx  CMakeLists.txt
src/andnotimagefilter/: AndNotImageFilter.cxx  CMakeLists.txt  itkAndNotImageFilter.h
src/averagevectormagnitude/: CMakeLists.txt  averagevectormagnitude.cxx  averagevectormagnitude.h
src/binaryimageoperator/: BinaryImageOperatorHelper.h  BinaryImageOperatorMainHelper.h  CMakeLists.txt  binaryimageoperator.cxx  itkBinaryFunctors.h
src/binarythinning/: CMakeLists.txt  binarythinning.cxx  binarythinning.h
src/braindistance/: CMakeLists.txt  braindistance.cxx  itkDeformationFieldBendingEnergyFilter.h  itkDeformationFieldBendingEnergyFilter.txx
src/castconvert/: CMakeLists.txt  ImageCompare.cxx  castconvert.cxx  castconvert.h  castconvert2D.cxx  castconvert3D.cxx  castconvert4D.cxx  castconvertDICOM.cxx  castconvertDicomScalar.cxx  castconvertDicomScalarA.cxx  castconvertDicomScalarB.cxx  castconvertMultiComponent.cxx  castconvertMultiComponent2D2CA.cxx  castconvertMultiComponent2D2CB.cxx  castconvertMultiComponent2D3CA.cxx  castconvertMultiComponent2D3CB.cxx  castconvertMultiComponent2D4CA.cxx  castconvertMultiComponent2D4CB.cxx  castconvertMultiComponent3D2CA.cxx  castconvertMultiComponent3D2CB.cxx  castconvertMultiComponent3D3CA.cxx  castconvertMultiComponent3D3CB.cxx  castconvertMultiComponent3D4CA.cxx  castconvertMultiComponent3D4CB.cxx  castconvertMultiComponent4D2CA.cxx  castconvertMultiComponent4D2CB.cxx  castconvertMultiComponent4D3CA.cxx  castconvertMultiComponent4D3CB.cxx  castconvertMultiComponent4D4CA.cxx  castconvertMultiComponent4D4CB.cxx  castconvertScalar.cxx  castconvertScalar2D.cxx  castconvertScalar2DA.cxx  castconvertScalar2DB.cxx  castconvertScalar3D.cxx  castconvertScalar3DA.cxx  castconvertScalar3DB.cxx  castconvertScalar4D.cxx  castconvertScalar4DA.cxx  castconvertScalar4DB.cxx  (+2 more)
src/changeimageinformation/: CMakeLists.txt  changeimageinformation.cxx  changeimageinformation.h
src/closestversor3Dtransform/: CMakeLists.txt  closestversor3Dtransform.cxx  closestversor3Dtransform.h
src/combinesegmentations/: CMakeLists.txt  combinesegmentations.cxx  combinesegmentations.h  itkLabelVoting2ImageFilter.h  itkLabelVoting2ImageFilter.txx  itkMultiLabelSTAPLE2ImageFilter.h  itkMultiLabelSTAPLE2ImageFilter.txx  itkMultiLabelSTAPLEImageFilter.h  itkMultiLabelSTAPLEImageFilter.txx  itkNaryUnequalityTestImageFilter.h
src/common/: CMakeLists.txt  CommandLineArgumentHelper.cxx  CommandLineArgumentHelper.h  CommandLineArgumentHelper.hxx  CommandLineArgumentHelper.txx  ITKToolsBase.cxx  ITKToolsBase.h  ITKToolsHelpers.cxx  ITKToolsHelpers.h  ITKToolsImageProperties.cxx  ITKToolsImageProperties.h  itkChannelByChannelVectorImageFilter.h  itkChannelByChannelVectorImageFilter.txx  itkChannelByChannelVectorImageFilter2.h  itkChannelByChannelVectorImageFilter2.txx  itkCommandLineArgumentParser.cxx  itkCommandLineArgumentParser.h  itkUseMevisDicomTiff.h
src/computeadditionimage/: CMakeLists.txt  computeadditionimage.cxx
src/computeboundingbox/: CMakeLists.txt  computeboundingbox.cxx  computeboundingbox.h
src/computedifferenceimage/: CMakeLists.txt  computedifferenceimage.cxx
src/computedifferenceimageBIG/: CMakeLists.txt  computeDifferenceImage.cxx  computeDifferenceImageBIG.cxx  computeDifferenceImageHelpers.h  computeDifferenceImageScalar.cxx  computeDifferenceImageScalar2D.cxx  computeDifferenceImageScalar3D.cxx  computeDifferenceImageScalar4D.cxx  computeDifferenceImageVector.cxx  computeDifferenceImageVector2D.cxx  (+2 more)
(+434 files in other folders)
